added filters to tests list
